// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalImagesSection should match a snapshot where has images 1`] = `
<Component
  className="is-desktop flex-col-min-height"
  isMultiLine={true}
>
  <Component
    className="is-half-desktop"
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png"
  >
    <Component
      uri="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png"
    />
  </Component>
  <Component
    className="is-half-desktop"
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png"
  >
    <Component
      uri="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png"
    />
  </Component>
</Component>
`;

exports[`AdditionalImagesSection should match a snapshot where has no images 1`] = `""`;

exports[`AuthenticationSection should match a snapshot where authFlow is CLIENT_SECRET and not sidebar 1`] = `
<Component
  headerText="Authentication"
  isSidebar={false}
>
  <div
    className=""
    data-test="authentication-client-id"
  >
    <b
      className="mr-2"
    >
      Client ID:
    </b>
    SOME_ID
  </div>
</Component>
`;

exports[`AuthenticationSection should match a snapshot where authFlow is USER_SESSION sidebar 1`] = `
<Component
  headerText="Authentication"
  isSidebar={true}
>
  <div
    className=""
    data-test="authentication-client-id"
  >
    <b
      className="mr-2"
    >
      Client ID:
    </b>
    SOME_ID
  </div>
</Component>
`;

exports[`BackToAppsSection should match a snapshot 1`] = `
<Component
  className="pt-4 bt mt-4 flex"
>
  <Component
    onClick={[MockFunction]}
  >
    Back To Apps
  </Component>
</Component>
`;

exports[`CategorySection should match a snapshot where category is defined and is sidebar 1`] = `
<Component
  headerText="Category"
  isSidebar={true}
>
  <p>
    None
  </p>
</Component>
`;

exports[`CategorySection should match a snapshot where category undefined and not sidebar 1`] = `
<Component
  headerText="Category"
  isSidebar={false}
>
  <p>
    None
  </p>
</Component>
`;

exports[`DescriptionSection should match a snapshot 1`] = `
<Component
  html="Lorem ipsum"
/>
`;

exports[`DesktopIntegrationSection should match a snapshot where desktopIntegrationTypes empty and not sidebar 1`] = `
<Component
  headerText="Desktop Integration"
  isSidebar={false}
>
  <p>
    None
  </p>
</Component>
`;

exports[`DesktopIntegrationSection should match a snapshot where desktopIntegrationTypes hasLength and is sidebar 1`] = `
<Component
  headerText="Desktop Integration"
  isSidebar={true}
>
  <Component
    key="Identity Check"
  >
    Identity Check
  </Component>
  <Component
    key="Property Marketing Information"
  >
    Property Marketing Information
  </Component>
  <Component
    key="Vendor Marketing Report"
  >
    Vendor Marketing Report
  </Component>
  <Component
    key="Property Details Generation"
  >
    Property Details Generation
  </Component>
  <Component
    key="Applicant Export"
  >
    Applicant Export
  </Component>
  <Component
    key="Property"
  >
    Property
  </Component>
  <Component
    key="Applicant"
  >
    Applicant
  </Component>
</Component>
`;

exports[`DeveloperAboutSection should match a snapshot 1`] = `
<Component
  headerText="About Developer"
  isSidebar={true}
/>
`;

exports[`DeveloperSection should match a snapshot 1`] = `
<Component
  headerText="Developer"
  isSidebar={true}
>
  Developer Name
</Component>
`;

exports[`DirectApiSection should match a snapshot where isDirectApi false and not sidebar 1`] = `
<Component
  headerText="Direct API"
  isSidebar={false}
>
  No
</Component>
`;

exports[`DirectApiSection should match a snapshot where isDirectApi true and is sidebar 1`] = `
<Component
  headerText="Direct API"
  isSidebar={true}
>
  Yes
</Component>
`;

exports[`InstallationsTableSection should not render a table when has no data 1`] = `
<Component
  columns={Array []}
  data={Array []}
>
  <Component
    dataTest="render-installations-table-empty-text"
    headerText="Installations"
    isSidebar={false}
  >
    <Component
      dataTest="render-installations-table-empty-text"
    >
      <div
        className=""
        data-test="render-installations-table-empty-text"
      >
        <Component
          className=""
        >
          <h5
            className=""
            id=""
          >
            Installations
          </h5>
        </Component>
        <p>
          Currently, there are no installations for your app
        </p>
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`InstallationsTableSection should render a table and match a snapshot when has data 1`] = `
<Component
  columns={Array []}
  data={
    Array [
      Object {
        "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
        "client": "DXX",
        "created": "2019-12-03T05:33:20",
        "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
        "links": Array [
          Object {
            "action": "GET",
            "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
            "rel": "self",
          },
          Object {
            "action": "GET",
            "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
            "rel": "app",
          },
        ],
        "status": "Active",
      },
    ]
  }
>
  <Component
    dataTest="render-installations-table"
    headerText="Installations"
    isSidebar={false}
  >
    <Component
      dataTest="render-installations-table"
    >
      <div
        className=""
        data-test="render-installations-table"
      >
        <Component
          className=""
        >
          <h5
            className=""
            id=""
          >
            Installations
          </h5>
        </Component>
        <Component
          columns={Array []}
          data={
            Array [
              Object {
                "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                "client": "DXX",
                "created": "2019-12-03T05:33:20",
                "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                    "rel": "app",
                  },
                ],
                "status": "Active",
              },
            ]
          }
          loading={false}
          scrollable={true}
        >
          <div
            style={
              Object {
                "maxHeight": undefined,
                "overflow": "scroll",
              }
            }
          >
            <table
              className="table is-striped is-fullwidth "
              role="table"
            >
              <thead />
              <tbody />
            </table>
          </div>
        </Component>
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`ListingPreviewSection should match a snapshot 1`] = `
<Component
  headerText={
    <React.Fragment>
      <span
        className="mr-2"
      >
        See listing preview
      </span>
       
      <a
        className=""
        href="#"
        onClick={[Function]}
      >
        <FaExternalLinkAlt />
      </a>
    </React.Fragment>
  }
  isSidebar={true}
>
  <p>
    The listing preview will display your app as it would appear in the Marketplace
  </p>
</Component>
`;

exports[`PermissionsSection should match a snapshot where has no permissions 1`] = `
<Component
  headerText="Permissions required"
>
  <Component />
</Component>
`;

exports[`PermissionsSection should match a snapshot where has permissions 1`] = `
<Component
  headerText="Permissions required"
>
  <Component>
    <Component
      key="Marketplace/developers.read"
    >
      Read data about developers
    </Component>
    <Component
      key="Marketplace/developers.write"
    >
      Write data about developers
    </Component>
  </Component>
</Component>
`;

exports[`PrivateAppSection should match a snapshot where limitToClientIds empty and not sidebar 1`] = `
<Component
  headerText="Private App"
  isSidebar={false}
>
  No
</Component>
`;

exports[`PrivateAppSection should match a snapshot where limitToClientIds hasLength and is sidebar 1`] = `
<Component
  headerText="Private App"
  isSidebar={true}
>
  Yes
</Component>
`;

exports[`SummarySection should match a snapshot 1`] = `
<Component
  className="is-italic"
>
  Lorem ipsum
</Component>
`;
